# vp-adk-demo-agents

./: .copilot-todo  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  adk-agents.code-workspace  deploy_oauth_agent.py  pyproject.toml
agents/: agent.py  requirements.txt
agents/airbnb_planner_multiagent/: CODE_EXPLANATION_README.md  README.md  run_demo.sh
agents/airbnb_planner_multiagent/airbnb_agent/: airbnb_agent.md
agents/airbnb_planner_multiagent/host_agent/: __init__.py  host_agent.md  remote_agent_connection.py  routing_agent.py
agents/airbnb_planner_multiagent/weather_agent/: agent.json  weather_agent.md
agents/alphabet_10K_search_agent/agent/: agent.py
agents/alphabet_10K_search_agent/agent_tmp20251216_195552/: agent.py
agents/calendar_agent_a2a/: CODE_EXPLANATION.md  Dockerfile  README.md  __init__.py  agent.py  agent_executor.py  create_ge_agent.sh  pyproject.toml
agents/code_executor_agent/: .gitignore  README.md  agent.py  create_ge_agent.sh  delete_ge_agent.sh  pyproject.toml
agents/file_processing_agent/: agent.py  deploy_to_agent_engine.py  pyproject.toml  requirements.txt
agents/file_processing_agent/agent/: requirements.txt
agents/file_processing_agent_tmp20251212_151434/agent/: agent.py
agents/long_running_agent/long_running_agent/: .gcloudignore  pyproject.toml
agents/mcp_auth_agent/: pyproject.toml
agents/mcp_auth_agent/code_snippet_agent/terraform/: iam.tf  locals.tf  variables.tf
agents/mcp_auth_agent/code_snippet_agent_adk_web/: README.md  agent.py  cloudbuild.yaml  deploy.sh  helper.py  pyproject.toml
agents/mcp_auth_agent/code_snippet_agent_adk_web/agent/: agent.py
agents/mcp_auth_agent/code_snippet_agent_adk_web/terraform/: backend.tf  iam.tf  oauth_consent.tf  outputs.tf  variables.tf
agents/mcp_auth_agent/code_snippet_agent_ge/: .gcloudignore  pyproject.toml
agents/mcp_auth_agent/code_snippet_agent_ge/agent/: agent.py  patch_adk.py
agents/mcp_auth_agent/code_snippet_mcp_server/: .gitignore  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  pyproject.toml
agents/mcp_auth_agent/code_snippet_mcp_server/src/: main.py
agents/mcp_auth_agent/code_snippet_mcp_server/terraform/: api.tf  backend.tf  locals.tf  main.tf  outputs.tf
agents/mcp_auth_agent/mcp_auth_agent/: agent.py
agents/mcp_auth_agent/mcp_auth_agent/terraform/: iam.tf  variables.tf
agents/mcp_auth_agent/mcp_auth_server/: .gcloudignore  Dockerfile  cloudbuild.yaml  pyproject.toml
agents/mcp_auth_agent/mcp_auth_server/src/: main.py
agents/mcp_auth_agent/mcp_auth_server/terraform/: backend.tf  iam.tf  locals.tf  main.tf  provider.tf  terraform.tfvars  variables.tf
agents/mcp_client_agent/: agent.py  agent_local.py  deploy_to_agent_engine.py
agents/multi_tool_agent/: .gcloudignore  agent.py  pyproject.toml
agents/multi_tool_agent/agent/: agent.py
agents/oauth_agent/: __init__.py  _agent.bkup  agent.py  agent_local.py  deploy_to_agent_engine.py  test_oauth_agent.py
agents/q&a_a2a_agent/: agent.py  agent_card.py  agent_executor.py  create_ge_agent.sh  test_local.py  utils.py
agents/scratch/mcp_client_agent/: deploy_to_agent_engine.py
agents/scratch/mcp_client_agent_local/: agent.py
agents/sec_edgar_agent/: DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  pyproject.toml
agents/sec_edgar_agent/sec_edgar_agent/: .env.example  .gitignore  README.md  agent.py  create_auth_id.sh  create_ge_agent.sh  patch_adk.py
agents/sec_edgar_agent/sec_edgar_mcp/: LICENSE  __init__.py  requirements.txt  server.py
agents/sec_edgar_agent/sec_edgar_mcp/core/: __init__.py  client.py
agents/sec_edgar_agent/sec_edgar_mcp/utils/: __init__.py  cache.py
agents/template_agent/: template_agent.py
agents/vertex_ai_search_agent/: pyproject.toml
agents/vertex_ai_search_agent/agent/: agent.py  requirements.txt
cli/: README.md  __main__.py
scripts/: .env.bkup  create_agent.sh  create_authorization.sh  deploy_to_agent_engine.sh  set_env.sh
scripts/gemini_enterprise_agents/: create_authorization.sh  delete_auth_id.sh  list_agents.sh  validate_config.sh
scripts/people_connector/: README.md  import_data.sh  import_discovery_engine.sh  pyproject.toml
scripts/people_connector/data/: org_data_expertise.jsonl  organization_data_discovery_engine.jsonl  organization_schema.json  people_data.json
scripts/people_connector/src/: check_datastore.py  prepare_discovery_engine_data.py  upload_documents.py
scripts/unstructured_ds_metadata/: metadata.jsonl  unstructured_metadata.sh
scripts/unstructured_ds_metadata/data/: source.txt
tests/: test_oauth_agent.py
