[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "agents"
version = "0.1.0"
authors = [
  { name="Vishal Patel", email="vishalapatel@google.com" },
]
description = "A collection of ADK example agents."
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
  "python-dotenv>=1.0.1",
  "google-adk==1.13.0",
  "google-cloud-aiplatform[adk,agent-engines]>=1.112.0",
  "google-genai>=0.6.0",
  "google-auth>=2.30.0",
  "google-auth-oauthlib==1.2.2",
  "google-api-python-client>=2.133.0",
  "google-cloud-logging>=3.11.0",
  "fastapi>=0.111.0",
  "Pillow>=10.3.0",
  "PyPDF2>=3.0.1",
  "numpy>=1.26.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "a2a-sdk>=0.3.4",
  "ipython>=9.6.0",
]

[tool.setuptools.packages.find]
where = ["agents"]
