[project]
name = "file-processing-agent"
version = "0.1.0"
description = "A sample ADK agent that demonstrates using the load_artifacts tool to process various file types."
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.20.0",
    "python-dotenv>=1.0.0",
    "google-cloud-aiplatform[adk,agent_engines]",
    "Pillow>=10.0.0",
    "PyPDF2==3.0.0"    
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"