[project]
name = "code-snippet-agent"
version = "0.1.0"
description = "An ADK agent requiring auth for MCP usage within Gemini Enterprise."
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.20.0",
    "python-dotenv>=1.0.0",
    "google-auth>=2.0.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"